--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@mui/icons-material": "5.11.11",
     "@mui/material": "5.11.15",
     "@mui/system": "5.11.15",
+    "axios": "^1.4.0",
+    "firebase": "^9.19.1",
     "loader-utils": "3.2.1",
     "quill": "1.3.7",
     "react": "18.2.0",
@@ -19,7 +21,7 @@
     "react-responsive-carousel": "3.2.23",
     "react-router-dom": "6.9.0",
     "react-scripts": "5.0.1",
-    "react-split-pane": "0.1.92"
+    "sweetalert2": "^11.7.5"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
@@ -31,5 +33,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "homepage": "."
 }
