--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-responsive-carousel": "3.2.23",
     "react-router-dom": "6.9.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "9.1.2",
     "sweetalert2": "^11.7.5"
   },
   "devDependencies": {
